--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,36 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HOMEWORK #11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
     <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+      <form class="search-form" action="">
+        <input
+          class="search-input"
+          type="search"
+          name="search"
+          placeholder="Search images..."
+        />
+        <button class="button search-button" type="submit">Search</button>
+      </form>
     </section>
+    <section>
+      <div data-modal class="loader-thumb">
+        <span class="loader is-hidden"></span>
+      </div>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+      <ul class="gallery-list"></ul>
+
+      <button
+        type="button "
+        class="button loadMore-button is-hidden"
+        data-action="load-more"
+      >
+        Load more
+      </button>
+    </section>
 
     <script type="module" src="./main.js"></script>
   </body>
